force-app/main/default/objects/HL_NHL_Logic__mdt/HL_NHL_Logic__mdt.object-meta.xml
<CustomObject>
    <label>HL NHL Logic</label>
    <pluralLabel>HL NHL Logics</pluralLabel>
</CustomObject>