force-app/main/default/objects/HL_NHL_Logic__mdt/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>