force-app/main/default/objects/HL_NHL_Logic__mdt/fields/Property_Detail__c.field-meta.xml
<CustomField>
    <fullName>Property_Detail__c</fullName>
    <label>Property Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>