force-app/main/default/objects/HL_NHL_Logic__mdt/fields/Sub_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Sub_Scheme__c</fullName>
    <label>Sub Scheme</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>