force-app/main/default/objects/HL_NHL_Logic__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NamespacePrefix</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Customer_Type__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Property_Detail__c</columns>
    <columns>Sub_Scheme__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>